# NSU-projects

./: Array.cpp  CMakeLists.txt  SmartPtr.cpp  all-defect.cpp  change-choice.h  detailed_mode.cpp  factory.h  forgive-revenge.cpp  gameplay_creator.cpp  hash_table.cpp  main.cpp  mode.cpp  mode.h  poor-trusting-fool.h  soft-tit-for-tat.cpp  strategy.h  table.cpp  table.h  test2.cpp  test_for_hashtable.cpp  tests.cpp  tough-tit-for-tat.cpp
Befunge/: Factory.java  Interpreter.java  Main.java  Reflection.java  build.gradle  listOfCommands.properties
Befunge/commands/: Add.html  Add.java  Bridge.html  Bridge.java  Command.html  Command.java  Divide.html  Divide.java  DoNothing.html  DoNothing.java  Dup.html  Dup.java  End.html  End.java  Get.html  Get.java  Greater.html  Greater.java  HorizontalIf.html  HorizontalIf.java  InStack.html  InStack.java  InputCharacter.html  InputCharacter.java  InputInt.html  InputInt.java  Modulo.html  Modulo.java  Multiplication.html  Multiplication.java  Not.html  Not.java  OutputChar.html  OutputChar.java  OutputInt.html  OutputInt.java  Pop.html  Pop.java  Put.html  Put.java  (+20 more)
Befunge/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
Befunge/javadoc/: Factory.html  Interpreter.html  Main.html  allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  package-summary.html  package-tree.html  type-search-index.js
Befunge/javadoc/programContent/: Content.html  DIRECTION.html  package-summary.html  package-tree.html
Befunge/programContent/: Content.java  DIR.java  DIRECTION.java
Befunge/src/: Interpreter.java  Main.java  listOfCommands.properties
Befunge/src/commands/: Add.java  Bridge.java  Command.java  Divide.java  Dup.java  End.java  Get.java  Greater.java  HorizontalIf.java  InStack.java  InputCharacter.java  InputInt.java  Modulo.java  Multiplication.java  Not.java  OutputChar.java  OutputInt.java  Pop.java  Put.java  StringMode.java  Subtraction.java  Swap.java  TurnDown.java  TurnLeft.java  TurnRandom.java  TurnRight.java  TurnUp.java  VerticalIf.java
Befunge/src/programContent/: Content.java
Befunge/src/tests/: HelloWord.txt  inputChar.txt
Befunge/tests/: sum.txt
Life/: field.cpp  field.h  game.cpp  game.h  main.cpp  saveload.cpp  saveload.h  widget.cpp  widget.h  widget.ui
Pacman/: build.gradle
Pacman/src/sample/: BlueGhost.java  Cell.java  Controller.java  ControllerGameOver.java  Direction.java  Dot.java  Entity.java  EntityImage.java  Field.java  Ghost.java  Main.java  Model.java  Pacman.java  PinkGhost.java  Scores.java  Visual.java  VisualOptions.java  VisualPause.java  d.fxml  field.txt  field3.txt  gameOver.fxml  pause.fxml  results.txt  sample.fxml  scores.properties
PrisonerDilemma/: CMakeLists.txt  all-defect.cpp  all-defect.h  change-choice.cpp  change-choice.h  create_strategies.h  detailed_mode.cpp  detailed_mode.h  factory.h  fast_mode.cpp  fast_mode.h  forgive-revenge.cpp  forgive-revenge.h  gameplay_creator.cpp  gameplay_creator.h  gamer.h  main.cpp  mode.cpp  mode.h  poor-trusting-fool.cpp  poor-trusting-fool.h  print_results.cpp  print_results.h  random.cpp  random.h  soft-tit-for-tat.cpp  soft-tit-for-tat.h  strategy.h  table.h  tests.cpp  text for create dll.txt  tough-tit-for-tat.cpp  tough-tit-for-tat.h  tournament_mode.cpp  tournament_mode.h  typenames.h  unit.h
PrisonerDilemma/strategies/: all-defect.cpp  all-defect.h  change-choice.cpp  change-choice.h  forgive-revenge.cpp  forgive-revenge.h  poor-trusting-fool.cpp  poor-trusting-fool.h  random.cpp  random.h  soft-tit-for-tat.cpp  soft-tit-for-tat.h  tough-tit-for-tat.cpp  tough-tit-for-tat.h
automata_theory/: readme
hash_table/: .gitignore  CMakeLists.txt  table.cpp  table.h  tests.cpp
hash_table/iterator/: table.h  tests.cpp
torrent/: Client.java  CreateTorrent.java  DecodedMetafile.java  Handshake.java  Message.java  Peer.java  Server.java  text1.txt  x.torrent
torrent/serverFiles/: file.txt
